POC NEXT JS AUTH

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@datadog/browser-logs": "^4.16.1",
     "@datadog/datadog-ci": "^2.4.0",
     "@dnd-kit/core": "^6.1.0",
