--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "recharts": "^2.12.6",
     "remark-gfm": "^3.0.1",
     "remixicon": "^4.3.0",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^2.1.0",
     "tailwind-variants": "^0.1.20",
