--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "./tools",
     ".storybook/**/*.tsx",
     "./dist/types/**/*.ts",
-    "./next-env.d.ts",
+    "./next-env.d.ts"
   ],
   "exclude": ["./node_modules"]
 }
