rename singnin to signup and create onboarding page (#2572)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     "./tools",
     ".storybook/**/*.tsx",
     "./dist/types/**/*.ts",
-    "./next-env.d.ts"
+    "./next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": ["./node_modules"]
 }
